[package]
name = "advanced_data_flow"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
dotenv = "0.15"
eframe = "0.31"
rust_xlsxwriter = "0.83"
calamine = "0.26"
rfd = "0.15"
thiserror = "2"